@@ -10,6 +10,7 @@
 - fix interpolateFactor for event value computation
 - 3rd time derivative computed on potential (instead of hwater) to avoid
 instabilities when hwater tends to 0
+- fix retard coefficient for unsaturated (depends on saturation flow)
 
 ************************
 *** PMFv1912
